# transformer-scratch

./: .gitignore  README.md  pyproject.toml  train.py
const/: path.py
layers/transformer/: Embedding.py  FFN.py  MultiHeadAttention.py  PositionalEncoding.py  ScaledDotProductAttention.py  TransformerDecoder.py  TransformerEncoder.py
models/: Transformer.py
utils/dataset/: Dataset.py
utils/evaluation/: blue.py
utils/text/: text.py  vocab.py
